--- a/views/login.pug
+++ b/views/login.pug
@@ -12,6 +12,7 @@ else
     <input type="text" name="name">
     <label forhtml="pass"> 
     <input type="password" name ="pass">
+    <img src="./colorLogo.png">
 
 include footer.pug
 </body>
