--- a/views/person.pug
+++ b/views/person.pug
@@ -2,15 +2,15 @@
 <head>
 <title> Person</title>
 <body>
-<form action = "/person", method = "POST" enctype="multipart/form-data">
+<form action = "/", method = "POST" enctype="multipart/form-data">
 <label for = "name"> Name:</label>
 <input name = "name" type="text">
 <br>
-<label for = "age"> Age:</label>
-<input name = "age" type="text">
+<label for = "used"> used:</label>
+<input name = "used" type="text">
 <br>
-<label for = "nationality"> Nationality:</label>
-<input name = "nationality" type="text">
+<label for = "compny"> company:</label>
+<input name = "company" type="text">
 <br>
 <button type = "submit"> Create new person</button>
 </form>
