--- a/views/person.pug
+++ b/views/person.pug
@@ -9,7 +9,7 @@
 <label for = "used"> used:</label>
 <input name = "used" type="text">
 <br>
-<label for = "compny"> company:</label>
+<label for = "company"> company:</label>
 <input name = "company" type="text">
 <br>
 <button type = "submit"> Create new person</button>
